test/spec_vectors/unreached-invalid/fail/module_111.wat
(module (func (unreachable) (select (i32.const 1) (i64.const 1) (i32.const 1)) (drop)))